values/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-world
  namespace: dotnet
spec:
  selector:
    app: hello-world
  ports:
  - protocol: TCP
    port: 5000
